--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/utils/helpers": ["./src/utils/helpers"],
+      "@/utils/constants": ["./src/utils/constants"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
